--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -56,6 +67,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
@@ -64,7 +79,10 @@
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
 		</dependency>
-    </dependencies>
+
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
