--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.mvc.view.prefix=
 #spring.mvc.view.suffix=.html
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+logging.config=classpath:logback.xml
