--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.mvc.view.prefix=
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 logging.config=classpath:logback.xml
+
+logging.level.com.dy.springboot.server.mapper=debug
